# dat-orchestrator

./: Dockerfile  Dockerfile-dev  README.md  pyproject.toml
src/Executables/: main.py
src/Orchestrator/: main.py  worker.py
