[tool.poetry]
name = "dat-orchestrator"
version = "0.1.0"
description = "Will house executables and orchestrate job runs"
authors = ["Team <team@datlabs.com>"]
license = "MIT"
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.6"
pydantic = "^2.6.4"
# TODO REMOVE THESE !
lxml = "^5.1.0"
openai = "^1.16.0"
langchain-openai = "^0.1.1"
pinecone-client = "^3.1.0"

dat-core = {git = "https://github.com/dat-labs/dat-core", rev = "main", develop = true}
dat-client = {git = "https://github.com/dat-labs/dat-api-sdk", rev = "main", develop = true}
verified-sources = {git = "https://github.com/dat-labs/verified-sources", rev = "main", develop = true}
verified-generators = {git = "https://github.com/dat-labs/verified-generators", rev = "main", develop = true}
verified-destinations = {git = "https://github.com/dat-labs/verified-destinations", rev = "main", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
